docs: добавлен swagger для Get: /company, /company/branches /company/branches/{branch_id}, /company/branch/service/{branchserv_id}
